# opencl

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  go.mod
apps/: CMakeLists.txt
apps/Ch1/: matvec.c
apps/Ch11/: simple_image.c
apps/Ch2/: device_ext_test.c  platform_ext_test.c
apps/Ch3/: buffer_check.c  buffer_test.c  buffer_test.cl  map_copy.c
apps/Ch4/: double_test.c  double_test.cl  float_config.c  hello_kernel.c  vector_bytes.c  vector_widths.c
apps/Ch5/: id_check.c  mad_test.c  mad_test.cl  mod_round.c  op_test.c  polar_rect.c  select_test.c  shuffle_test.c
apps/Ch6/: interp.c  interp.cl  simple_image.c  simple_image.cl
apps/Ch61/: simple_image.c
apps/Ch7/: atomic.c  atomic.cl  callback.c  callback.cl  mutex.c  mutex.cl  profile_items.c  profile_items.cl  profile_read.c  profile_read.cl  user_event.c
apps/Ch8/: buffer_test.cpp  callback.cpp  create_kernels.cpp  full_context.cpp  map_copy.cpp  profile.cpp  sub_buffer.cl  sub_buffer.cpp  user_event.cpp
assets/source_code_gnu/Ch1/matvec/: matvec
assets/source_code_gnu/Ch14/fft/: fft.c  fft.cl
assets/source_code_gnu/Ch2/device_ext_test/: Makefile
assets/source_code_gnu/Ch3/buffer_check/: buffer_check.c
libs/util/: CMakeLists.txt  util.c  util.cpp  util.h  util.hpp
